clusters/home/media/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    pod-security.kubernetes.io/enforce: privileged
  annotations:
    volsync.backube/privileged-movers: "true"
