clusters/home/media/app/flaresolverr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  labels:
    app: flaresolverr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:v3.5.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8191
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flaresolverr
  name: flaresolverr
spec:
  selector:
    app: flaresolverr
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8191
