clusters/home/media/app/autobrr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: autobrr
  name: autobrr
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: autobrr
  template:
    metadata:
      labels:
        app: autobrr
    spec:
      containers:
        - image: ghcr.io/autobrr/autobrr:v1.85.0
          imagePullPolicy: Always
          name: autobrr
          volumeMounts:
            - name: autobrr-config
              mountPath: /config
      volumes:
        - name: autobrr-config
          persistentVolumeClaim:
            claimName: autobrr-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: autobrr
  name: autobrr
spec:
  selector:
    app: autobrr
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 7474
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: autobrr
spec:
  parentRefs:
    - name: gw-private
      namespace: gateway
      sectionName: https
  hostnames:
    - autobrr.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: autobrr
          port: 80
