clusters/home/media/app/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - image: ghcr.io/jellyfin/jellyfin:10.11.11
          imagePullPolicy: Always
          name: jellyfin
          securityContext:
            privileged: true # for DRI
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-cache
              mountPath: /config/cache
            - name: jellyfin-media
              mountPath: /media
            - name: jellyfin-dri
              mountPath: /dev/dri
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: jellyfin-cache
          persistentVolumeClaim:
            claimName: jellyfin-cache
        - name: jellyfin-media
          hostPath:
            path: /var/mnt/media
            type: Directory
        - name: jellyfin-dri
          hostPath:
            path: /dev/dri
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8096
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
    - name: gw-private
      namespace: gateway
      sectionName: https
  hostnames:
    - jellyfin.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: jellyfin
          port: 80
