clusters/home/media/app/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: docker.io/linuxserver/prowlarr:version-2.5.2.5491
          imagePullPolicy: Always
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prowlarr
  name: prowlarr
spec:
  ipFamilyPolicy: PreferDualStack # Radarr & Sonarr </3 IPv6
  selector:
    app: prowlarr
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 9696
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
spec:
  parentRefs:
    - name: gw-media
      sectionName: https
  hostnames:
    - prowlarr.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: prowlarr
          port: 80
