clusters/home/media/app/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr
  name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - image: lscr.io/linuxserver/radarr:version-6.3.0.10514
          imagePullPolicy: Always
          name: radarr
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: radarr-media
              mountPath: /media
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: radarr-media
          hostPath:
            path: /var/mnt/media
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr
  name: radarr
spec:
  selector:
    app: radarr
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 7878
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
spec:
  parentRefs:
    - name: gw-private
      namespace: gateway
      sectionName: https
  hostnames:
    - radarr.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: radarr
          port: 80
