clusters/home/media/app/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - image: lscr.io/linuxserver/sonarr:version-4.0.19.2979
          imagePullPolicy: Always
          name: sonarr
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: sonarr-media
              mountPath: /media
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: sonarr-media
          hostPath:
            path: /media
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  selector:
    app: sonarr
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8989
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
spec:
  parentRefs:
    - name: gw-private
      namespace: gateway
      sectionName: https
  hostnames:
    - sonarr.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: sonarr
          port: 80
